Support using ZGC